<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>rover</name>
  <version>0.0.0</version>
  <description>A project at Astra Robotics to practice for and partiipate in various rover competitions such as IRC and URC</description>
  <maintainer email="balasaianishp.ec22@rvce.edu.in">bala</maintainer>
  <license>MIT</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geomtery_msgs</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
